
* "access" flag is hiding and protecting entire project. This includes binaries
  and sources. It can only be used at project creation time and can just be
  globally enabled (aka make it public again) afterwards.
   This flag can only be used on projects.

* "sourceaccess" flag is hiding the sources to non maintainers, this includes also debug packages
  in case the distribution is supporting this correctly.
    This flag can also only be used at package creation time. There is no code
  yet which is checking for possible references to this package.
  This flag can be used on projects or packages.

* "downloadbinary" permission still exists like before. However, unlike "access" 
  and "sourceaccess" this is not a security feature. It is just a convinience feature, which
  makes it impossible to get the binaries via the API directly. But it still possible
  to get the binaries via build time in any case.


Known Regressions to 2.1:
=========================


Features:
=========

* web interface improvements:
  - package filtering
  - IChain host configurable
  - delete request dialogs
  - social features, i.e. show other user's projects and requests

* api
  - review of requests by project or package maintainers is possible now (FATE #310806)
  - better Cross-Site Scripting (XSS) protection

* backend:


Changes:
========

* web interface
  - bug reporting for projects/packages is only possible if a bugowner is set
  - XSS protection plugins are used now (CVE-2011-0462)

* api
  - It was not possible so far to create submit requests from packages where no write access exists.
    This is possible now, but the source package maintainer will get asked for review the request.


Requirements:
=============

* The OBS server should not run on a system with less than 2GB memory. 
  4GB is recommended, esp. when the same system is also building packages.

* Use osc 0.130 or later to get access to the new features.

* Usage of Ruby on Rails version 2.3.8 is mandatory.