@@ -14,6 +14,7 @@ class GroupControllerTest < ActionController::IntegrationTest
     assert_response :success
     assert_tag :tag => 'directory', :child => {:tag => 'entry'}
     assert_tag :tag => 'entry', :attributes => {:name => 'test_group'}
+    assert_tag :tag => 'entry', :attributes => {:name => 'test_group_b'}
   end
 
   def test_list_users_of_group
@@ -26,8 +27,8 @@ class GroupControllerTest < ActionController::IntegrationTest
     assert_response 404
     get "/group/test_group"
     assert_response :success
-    assert_tag :tag => 'directory', :child => {:tag => 'entry'}
-    assert_tag :tag => 'entry', :attributes => {:name => 'adrian'}
+    assert_tag :tag => 'group', :child => {:tag => 'title'}, :content => "test_group"
+    assert_tag :tag => 'person', :attributes => {:userid => 'adrian'}
   end
 
   def test_groups_of_user
@@ -36,10 +37,19 @@ class GroupControllerTest < ActionController::IntegrationTest
     assert_response 401
 
     prepare_request_valid_user
+    # old way, obsolete with OBS 3
     get "/person/adrian/group"
     assert_response :success
     assert_tag :tag => 'directory', :child => {:tag => 'entry'}
     assert_tag :tag => 'entry', :attributes => {:name => 'test_group'}
+    assert_no_tag :tag => 'entry', :attributes => {:name => 'test_group_b'}
+
+    # new way, standard since OBS 2.3
+    get "/group?login=adrian"
+    assert_response :success
+    assert_tag :tag => 'directory', :child => {:tag => 'entry'}
+    assert_tag :tag => 'entry', :attributes => {:name => 'test_group'}
+    assert_no_tag :tag => 'entry', :attributes => {:name => 'test_group_b'}
   end
 
 end
